<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/quices"
            android:textAppearance="@style/TextViewStyle.grande"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint"
           android:textAppearance="@style/EditTextStyle"
            android:layout_weight="1"
            android:id="@+id/e_quices"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/exposiciones"
            android:textAppearance="@style/TextViewStyle.grande"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint"
            android:textAppearance="@style/EditTextStyle"
            android:layout_weight="1"
            android:id="@+id/e_exposiciones"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/laboratorio"
            android:textAppearance="@style/TextViewStyle.grande"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint"
            android:textAppearance="@style/EditTextStyle"
            android:layout_weight="1"
            android:id="@+id/e_laboratorio"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/proyecto_final"
            android:textAppearance="@style/TextViewStyle.grande"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint"
            android:textAppearance="@style/EditTextStyle"
            android:layout_weight="1"
            android:id="@+id/e_proyecto_final"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/boton"
        android:textSize="20dp"
        android:id="@+id/b_calcular"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/definitiva"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/t_definitiva"
        android:textColor="@color/darkgreen"/>

</LinearLayout>